<resources>
    <string name="app_name">SJR Tyres Sales</string>


    <string name="new_version_available">New version available</string>


    <!--IN OUT-->
    <string name="mark_in_time">Mark In Time </string>
    <string name="mark_out_time">Mark Out Time </string>

    <!--Meetings-->
    <string name="submit">Submit</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="shop_name">Shop Name</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="distributor_mobile">Distributor Mobile</string>
    <string name="shop_name_required">Shop name required</string>
    <string name="distributor_name_required">Distributor name required</string>
    <string name="distributor_mobile_required">Invalid distributor mobile number</string>
    <string name="select_type">Select Type</string>
    <string name="type_required">Type required</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="name_required">Name required</string>


    <!--Home-->
    <string name="in_out">IN OUT</string>
    <string name="meetings">Meetings</string>
    <string name="history">History</string>
    <string name="dashboard">Dashboard</string>
    <string name="allowance">Allowance</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="cancel">Cancel</string>

    <string name="title">Title</string>
    <string name="capture_photo">Capture photo</string>
    <string name="selfi_with_shop">Selfi with shop</string>
    <string name="camera_permission_rationale">Camera and Storage permissions is needed for capturing image through camera!</string>
    <string name="location_permission_rationale">Location permissions is needed.</string>
    <string name="allow_permission">Permission required</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>

    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_required">Password required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="No_results_dashboard">Your dashboard data will appear here.</string>
    <string name="No_results_history">Your history will appear here.</string>
    <string name="amount">Amount</string>

    <string name="current_time">Current Time - </string>
    <string name="in_time">In Time </string>
    <string name="out_time">Out Time </string>
    <string name="ok">Ok</string>

    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="profile_photo">Profile Photo</string>

    <string name="title_required">Title required</string>
    <string name="amount_required">Amount required</string>
    <string name="photo_required">Photo required</string>
    <string name="meeting_details">Meeting Details</string>
    <string name="endMeeting">End Meeting</string>
    <string name="conclusion">Conclusion</string>
    <string name="conclusion_required">Conclusion required</string>
    <string name="update">Update</string>

    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_required">New password required</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="background_location_permission_message">Please select Allow all the time option.</string>
    <string name="service_start_successfully">Service started successfully</string>
    <string name="service_already_running">Service already running</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong, please try again later</string>

</resources>