<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.sjrtyressales.model.MyProfileData" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:title="@string/app_name"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/deep_orange_400"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:visibility="gone"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:foreground="@color/overlay_dark_30"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background" />

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:layout_gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    imageFromUrl="@{data.sales_employee.profile_image}"
                    android:id="@+id/image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/photo_male_8"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/grey_10" />

                    <include
                        android:id="@+id/include_edit_photo_loader"
                        layout="@layout/item_loading_layout_edit_photo"/>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@{data.sales_employee.name}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_90" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/spacing_large"
                        android:layout_height="@dimen/spacing_large"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:layout_marginRight="@dimen/spacing_medium"
                        app:tint="@color/grey_40"
                        app:srcCompat="@drawable/ic_mail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{data.sales_employee.email}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/grey_40" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabDashboard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_dashboard" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/dashboard"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabInOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_inout" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/in_out"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabMeetings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_meeting" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/meetings"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabHistory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/history"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabAllowance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_wallet" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/allowance"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_person" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/profile"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:minWidth="100dp"
                        android:orientation="vertical">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fabLogout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:tint="@color/grey_80"
                            app:backgroundTint="@android:color/white"
                            app:elevation="1dp"
                            app:fabSize="normal"
                            app:rippleColor="@color/deep_orange_400"
                            app:srcCompat="@drawable/ic_logout" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_medium"
                            android:text="@string/logout"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/includedLoader"
            layout="@layout/item_loading_layout"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>